# openwebui-rag

./: README  README.md  docker-compose.yaml  entrypoint.sh  prompt.txt  taskfile.yaml
rag/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum  taskfile.yaml
rag/cmd/embed/: main.go
rag/cmd/encode/: main.go
rag/cmd/migration/: main.go
rag/cmd/put/: main.go
rag/cmd/tool-server/: main.go
rag/cmd/upsert/: main.go
rag/embed/: embed.go
rag/milvus/: client.go  crud.go  migrate.go
rag/schemas/: openapi.split.json  openapi.tools.json  schema.go  server.cfg.yaml  types.cfg.yaml
rag/split/: Dockerfile  pyproject.toml  splitter.py
rag/utils/embed/: embed.go
rag/utils/splitter/: split.go
